# py-dashboard-dash

./: .env.example  .gitignore  README.md  app.py  app_monolith.py  gunicorn.conf.py  pyproject.toml  pytest.ini
assets/: styles.css
dashboard/: __init__.py  auth.py  callbacks.py  config.py  data.py  server.py  ui.py  utils.py
dashboard/datasources/: __init__.py  base.py  cache.py  repository.py  rest.py  sql.py  synthetic.py
tests/: conftest.py  test_auth.py  test_cachefacade.py  test_callbacks.py  test_config.py  test_datasources.py  test_repository.py  test_server.py  test_ui_layout.py  test_ui_playwright.py  test_utils.py
