[project]
name = "py-dashboard-dash"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "dash>=3,<4",
  "plotly>=5",
  "flask>=3,<4",
  "flask-caching>=2.3",
  "pandas>=1.5",
  "numpy>=1.23",
  "requests>=2.28",
  "SQLAlchemy>=1.4",
  "pyjwt>=2.4",
  "python-dotenv>=1.0",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "poethepoet>=0.37.0",
]

[dependency-groups]
dev = [
    "pandas-stubs==2.3.2.250926"
]
prod = [
    "gunicorn>=23.0.0",
    "uvicorn-worker>=0.4.0",
]
test = [
    "freezegun>=1.5.5",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.1",
    "requests-mock>=1.12.1",
]

[tool.poe.tasks]
#            erver
start = "python app.py"
# Run unit tests only (fast, skips E2E)
test = "pytest -q -m 'not e2e'"
# Run full test suite including E2E tests
test-all = "pytest -q"
# Generate coverage report for unit tests
cov = "pytest -q -m 'not e2e'"
# Generate coverage report for all tests
cov-all = "pytest -q"
# Generate HTML coverage report
cov-html = "pytest -q -m 'not e2e' --cov-report=html"
